fix image/video clicks in notifications

--- a/components/link-to-context.module.css
+++ b/components/link-to-context.module.css
@@ -29,6 +29,8 @@
 .linkBoxParent textarea,
 .linkBoxParent button,
 .linkBoxParent input,
-.linkBoxParent iframe {
+.linkBoxParent iframe,
+.linkBoxParent video,
+.linkBoxParent img {
     pointer-events: auto !important;
 }
