--- a/components/text.module.css
+++ b/components/text.module.css
@@ -287,6 +287,7 @@ img.fullScreen {
 .twitterContainer {
     margin-top: .25rem;
     position: relative;
+    overflow: hidden;
 }
 
 .twitterContainer:not(:first-child) {
@@ -294,7 +295,7 @@ img.fullScreen {
 }
 
 .twitterContainer iframe {
-    border-radius: 12px;
+    border-radius: 13px;
 }
 
 .videoWrapper:not(:first-child) {
@@ -365,4 +366,11 @@ img.fullScreen {
 
 .tweetSkeleton .line:last-child {
     width: 75%;
+}
+
+.wavlakeWrapper {
+    width: 100%;
+    height: 380px;
+    border-radius: 1.65rem;
+    overflow: hidden;
 }
