--- a/components/text.module.css
+++ b/components/text.module.css
@@ -140,15 +140,20 @@
 }
 
 .p:has(> .mediaContainer:only-child) ~ .p:has(> .mediaContainer:only-child) {
-    display: inline-block;
+    display: inline-flex;
     width: fit-content;
-    margin-right: 1rem;
+    margin-right: .75rem;
+}
+
+.p:has(> .mediaContainer:only-child) ~ .p:has(> .mediaContainer:only-child) > .mediaContainer:only-child {
+    margin-top: 0 !important;
 }
 
 .p:has(> .mediaContainer:only-child):has(+ .p > .mediaContainer:only-child) {
-    display: inline-block;
+    margin-top: 0 !important;
+    display: inline-flex;
     width: fit-content;
-    margin-right: 1rem;
+    margin-right: .75rem;
 }
 
 .mediaContainer img, .mediaContainer video {
