even grid gap with safari support

--- a/components/text.module.css
+++ b/components/text.module.css
@@ -106,6 +106,12 @@
     margin-bottom: .5rem;
     white-space: pre-wrap;
     word-break: break-word;
+    --grid-gap: 0.5rem;
+}
+
+.text.topLevel .p {
+    margin-bottom: 0.75rem;
+    --grid-gap: 0.75rem;
 }
 
 .text pre {
@@ -130,7 +136,6 @@
 
 .mediaContainer {
     display: block;
-    margin-top: .5rem;
     margin-bottom: .5rem;
     width: 100%;
     height: auto;
@@ -140,20 +145,39 @@
 }
 
 .p:has(> .mediaContainer:only-child) ~ .p:has(> .mediaContainer:only-child) {
-    display: inline-flex;
-    width: fit-content;
-    margin-right: .75rem;
+    display: inline-block;
+    width: min-content;
+    margin-bottom: 0;
+}
+
+.mediaContainer ~ .mediaContainer {
+    display: inline-block;
+    width: min-content;
+    margin-right: var(--grid-gap);
 }
 
 .p:has(> .mediaContainer:only-child) ~ .p:has(> .mediaContainer:only-child) > .mediaContainer:only-child {
-    margin-top: 0 !important;
+    margin-right: var(--grid-gap);
 }
 
 .p:has(> .mediaContainer:only-child):has(+ .p > .mediaContainer:only-child) {
-    margin-top: 0 !important;
-    display: inline-flex;
-    width: fit-content;
-    margin-right: .75rem;
+    display: inline-block;
+    width: min-content;
+    margin-bottom: 0;
+}
+
+.p:has(> .mediaContainer:only-child):has(+ .p > .mediaContainer:only-child) > .mediaContainer:only-child {
+    margin-right: var(--grid-gap);
+}
+
+.mediaContainer:has(+ .mediaContainer) {
+    display: inline-block;
+    width: min-content;
+    margin-right: var(--grid-gap);
+}
+
+.mediaContainer:first-child:has(+ .mediaContainer) {
+    margin-top: var(--grid-gap);
 }
 
 .mediaContainer img, .mediaContainer video {
@@ -163,6 +187,7 @@
     max-height: inherit;
     height: 100%;
     aspect-ratio: var(--aspect-ratio);
+    inline-size: intrinsic;
 }
 
 .mediaContainer img {
@@ -172,7 +197,6 @@
 }
 
 .mediaContainer.topLevel {
-    margin-top: .75rem;
     margin-bottom: .75rem;
     max-height: 35vh;
 }
@@ -207,7 +231,7 @@ img.fullScreen {
     margin-bottom: 0;
 }
 
-.text li+li {
+.text li {
     margin-top: .25rem;
 }
 
