--- a/components/text.module.css
+++ b/components/text.module.css
@@ -106,6 +106,12 @@
     margin-bottom: .5rem;
     white-space: pre-wrap;
     word-break: break-word;
+    --grid-gap: 0.5rem;
+}
+
+.text.topLevel .p {
+    margin-bottom: 0.75rem;
+    --grid-gap: 0.75rem;
 }
 
 .text pre {
@@ -130,13 +136,51 @@
 
 .mediaContainer {
     display: block;
-    margin-top: .5rem;
     margin-bottom: .5rem;
-    width: 100%;
+    width: calc(100% - var(--grid-gap));
+    max-width: calc(100% - var(--grid-gap));
     height: auto;
     overflow: hidden;
     max-height: 25vh;
     aspect-ratio: var(--aspect-ratio);
+}
+
+.p:has(> .mediaContainer:only-child) ~ .p:has(> .mediaContainer:only-child) {
+    display: inline-block;
+    width: min-content;
+    max-width: calc(100% - var(--grid-gap));
+    margin-bottom: 0;
+}
+
+.mediaContainer ~ .mediaContainer {
+    display: inline-block;
+    width: min-content;
+    margin-right: var(--grid-gap);
+}
+
+.p:has(> .mediaContainer:only-child) ~ .p:has(> .mediaContainer:only-child) > .mediaContainer:only-child {
+    margin-right: var(--grid-gap);
+}
+
+.p:has(> .mediaContainer:only-child):has(+ .p > .mediaContainer:only-child) {
+    display: inline-block;
+    width: min-content;
+    max-width: calc(100% - var(--grid-gap));
+    margin-bottom: 0;
+}
+
+.p:has(> .mediaContainer:only-child):has(+ .p > .mediaContainer:only-child) > .mediaContainer:only-child {
+    margin-right: var(--grid-gap);
+}
+
+.mediaContainer:has(+ .mediaContainer) {
+    display: inline-block;
+    width: min-content;
+    margin-right: var(--grid-gap);
+}
+
+.mediaContainer:first-child:has(+ .mediaContainer) {
+    margin-top: var(--grid-gap);
 }
 
 .mediaContainer img, .mediaContainer video {
@@ -146,6 +190,7 @@
     max-height: inherit;
     height: 100%;
     aspect-ratio: var(--aspect-ratio);
+    block-size: stretch;
 }
 
 .mediaContainer img {
@@ -155,7 +200,6 @@
 }
 
 .mediaContainer.topLevel {
-    margin-top: .75rem;
     margin-bottom: .75rem;
     max-height: 35vh;
 }
@@ -190,7 +234,7 @@ img.fullScreen {
     margin-bottom: 0;
 }
 
-.text li+li {
+.text li {
     margin-top: .25rem;
 }
 
