--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -241,6 +241,10 @@ $zindex-sticky: 900;
   display: none;
 }
 
+.w-fit-content {
+  width: fit-content;
+}
+
 @media (display-mode: standalone) {
   .standalone {
     display: flex
