fix media grid with newlines in same p tag

--- a/components/text.module.css
+++ b/components/text.module.css
@@ -145,6 +145,10 @@
     aspect-ratio: var(--aspect-ratio);
 }
 
+.p:has(> .mediaContainer) {
+    white-space: normal;
+}
+
 .p:has(> .mediaContainer:only-child) ~ .p:has(> .mediaContainer:only-child) {
     display: inline-block;
     width: min-content;
