fix inline image shrinking

--- a/components/text.module.css
+++ b/components/text.module.css
@@ -203,7 +203,9 @@
 .p:has(> .mediaContainer:only-child) ~ .p:has(> .mediaContainer:only-child) > .mediaContainer:only-child img,
 .p:has(> .mediaContainer:only-child):has(+ .p > .mediaContainer:only-child) > .mediaContainer:only-child img,
 .mediaContainer ~ .mediaContainer img,
-.mediaContainer:has(+ .mediaContainer) img,
+.mediaContainer:has(+ .mediaContainer) img {
+    block-size: revert-layer;
+}
 .p:has(> .mediaContainer:only-child) ~ .p:has(> .mediaContainer:only-child) > .mediaContainer:only-child video,
 .p:has(> .mediaContainer:only-child):has(+ .p > .mediaContainer:only-child) > .mediaContainer:only-child video,
 .mediaContainer ~ .mediaContainer video,
