allow job stopping

--- a/components/item.module.css
+++ b/components/item.module.css
@@ -46,6 +46,12 @@ a.title:visited {
     margin-bottom: .15rem;
 }
 
+.badge {
+    vertical-align: middle;
+    margin-top: -1px;
+    margin-left: 0.1rem;
+}
+
 .newComment {
     color: var(--theme-grey) !important;
     background: var(--theme-clickToContextColor) !important;
