--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -263,6 +263,14 @@ $zindex-sticky: 900;
   justify-self: center;
 }
 
+.justify-self-left {
+  justify-self: left;
+}
+
+.justify-self-right {
+  justify-self: right;
+}
+
 svg {
   fill: var(--bs-body-color);
 }
