--- a/components/text.module.css
+++ b/components/text.module.css
@@ -236,7 +236,7 @@
 img.fullScreen {
     cursor: zoom-out !important;
     max-height: 100%;
-    max-width: 100%;
+    max-width: 100vw;
     min-width: 0;
     min-height: 0;
     align-self: center;
@@ -253,25 +253,30 @@ img.fullScreen {
     grid-template-columns: auto auto auto;
 }
 
-
 div.fullScreenNav {
     display: grid;
     height: 100%;
     width: 100%;
 }
 
-
-div.fullScreenNav:hover > svg {
+div.fullScreenNav:hover>div>svg {
     fill: var(--theme-navLinkActive);
 }
-svg.fullScreenNav {
-    fill: var(--theme-grey);
+
+div.fullScreenNav>div {
+    display: grid;
     height: 100%;
-    max-width: 32px;
 }
 
-svg.fullScreenNav:hover {
-    fill: var(--theme-navLinkActive);
+div.fullScreenNav>div>svg {
+    z-index: 1;
+    align-self: center;
+    border-radius: 50%;
+    background-color: color-mix(in srgb, var(--bs-body-bg), transparent);
+    fill: var(--theme-grey);
+    max-height: 32px;
+    max-width: 32px;
+    margin: 0.25rem;
 }
 
 .text table {
