notifications and badges

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -220,6 +220,10 @@ $zindex-sticky: 900;
   scroll-margin-top: 60px;
 }
 
+.ms-xs {
+  margin-left: 0.125rem;
+}
+
 .text-monospace {
   font-family: monospace;
 }
