--- a/styles/log.module.css
+++ b/styles/log.module.css
@@ -1,9 +1,4 @@
-.logNav {
-    text-align: center;
-    color: var(--theme-grey) !important; /* .text-muted */
-}
-
-.logTable {
+.tableContainer {
     width: 100%;
     max-height: 60svh;
     overflow-y: auto;
@@ -14,11 +9,34 @@
 }
 
 @media screen and (min-width: 768px) {
-    .logTable {
+    .tableContainer {
         max-height: 70svh;
     }
 
     .embedded {
         max-height: 30svh;
     }
+}
+
+.tableRow {
+    font-family: monospace;
+    color: var(--theme-grey) !important; /* .text-muted */
+}
+
+.timestamp {
+    vertical-align: top;
+    text-wrap: nowrap;
+    justify-self: first baseline;
+}
+
+.wallet {
+    vertical-align: top;
+    font-weight: bold;
+}
+
+.level {
+    font-weight: bold;
+    vertical-align: top;
+    text-transform: uppercase;
+    padding-right: 0.5em;
 }
