--- a/components/upvote.module.css
+++ b/components/upvote.module.css
@@ -50,6 +50,10 @@
     animation-direction: alternate;
 }
 
+.upvote.collapsed {
+    visibility: hidden;
+}
+
 @keyframes pulse {
 	0% {
 		fill: #a5a5a5;
