--- a/styles/wallet.module.css
+++ b/styles/wallet.module.css
@@ -20,7 +20,7 @@
   height: 180px;
 }
 
-.cardMeta {
+.indicators {
   position: absolute;
   width: 100%;
   display: grid;
@@ -59,23 +59,20 @@
 }
 
 .indicator {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
+  width: 14px;
+  height: 14px;
 }
 
 .indicator.success {
   color: var(--bs-green) !important;
   background-color: var(--bs-green) !important;
   border: 1px solid var(--bs-success);
-  filter: drop-shadow(0 0 2px #20c997);
 }
 
 .indicator.error {
   color: var(--bs-red) !important;
   background-color: var(--bs-red) !important;
   border: 1px solid var(--bs-danger);
-  filter: drop-shadow(0 0 2px #c92020);
 }
 
 .indicator.warning {
